# rust-roguelike

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: components.rs  context_builder.rs  game_log.rs  gui.rs  main.rs  map.rs  monster_ai_system.rs  player.rs  playground.rs  random.rs  rect.rs  rltk_ext.rs  save_load_system.rs  spawner.rs  state.rs  turn_decider.rs  visibility_system.rs
src/components/: intents.rs  mod.rs  serialization.rs
src/context/: console_index.rs  context.rs  context_builder.rs  mod.rs  rltk_ext.rs
src/gui/: camera_renderer.rs  item_menu_drawer.rs  main_menu_drawer.rs  mod.rs  ranged_target_drawer.rs  tooltip_drawer.rs  ui_drawer.rs
src/systems/: damage_system.rs  global_turn_system.rs  inventory_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  movement_system.rs  particle_system.rs  visibility_system.rs  wait_system.rs
src/systems/inventory/: item_collection_system.rs  item_drop_system.rs  item_use_system.rs  mod.rs
